apps/marketing-app/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: marketing-dev
  labels:
    istio-injection: enabled
