apps/marketing-app/overlays/dev/patch-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: marketing-app-gateway
  namespace: marketing-dev
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - pfechaima.duckdns.org
      

    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - pfechaima.duckdns.org
      tls:
        mode: SIMPLE
        credentialName: pfechaima-tls
