apps/marketing-app/overlays/dev/patch-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: marketing-app-vs
spec:
  hosts:
    - pfechaima.duckdns.org
